fixed overlap issue

--- a/medminder/src/Dash-style.css
+++ b/medminder/src/Dash-style.css
@@ -58,11 +58,13 @@
 }
 
 .arrow-right {
+  z-index: 10;
   right: -25%;
   top: -30%;
 }
 
 .arrow-left {
+  z-index: 10;
   left: -34%;
   top: -30%;
 }
@@ -90,6 +92,7 @@
   transition: transform 0.3s, box-shadow 0.4s;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   font-family: Urbanist;
+  z-index: 10;
 }
 
 .todayButton:hover {
